manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: log-output-ping-pong-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /status
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345

          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 3456
